k8s/Manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <NAME>
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: <CONTAINER-NAME>
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
