k8s/Manifest/services.yaml
apiVersion: v1
kind: Service

metadata:
  name: <NAME>
  namespace: <NAMESPACE>
spec:
  selector:
    run: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
