k8s/Manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <NAME>
  namespace: <NAMESPACE>
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: <LOADBALANCER-NAME>
    alb.ingress.kubernetes.io/scheme: # internet-facing // internal
    alb.ingress.kubernetes.io/subnets: # subnet name or subnet id
    alb.ingress.kubernetes.io/target-type: # instance // ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/target-node-labels: # node label
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <SERVICE-NAME>
            port:
              number: 80
